# degallery

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __main__.py
